--- a/style.css
+++ b/style.css
@@ -1,82 +1,79 @@
+
 body{
-    font-family: 'Oswald', sans-serif;
     margin: 0px;
 }
-span.name-highlight {
+h1 span {
     color: orange;
 }
-h{
+
+h1 {
     font-size: 50px;
+    font-weight: 700;
 }
 
-.half-style{
+h3 {
+    font-size: 25px;
+}
+
+
+
+p {
+    
+    text-align: justify;
+}
+
+a {
+    text-decoration: none;
+    background-color: hotpink;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 700;
+}
+.half-div{
     width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
-p{
-    text-align: justify;
-}
-
-.half-style img{
+img{
     width: 100%;
 }
+section{
+    height: 600px;
+    border: 2px solid red;
+}
+
 .top-banner{
     background-image: url("saifulimage/top-banner.png");
-    
     background-repeat: no-repeat;
 }
-
-section{
-    height: 650px;
-}
-
-a.link-button {
-    text-decoration: none;
-    background-image: linear-gradient(45deg, orange, tomato);
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-    font-weight: 500;
-}
-.dream-big{
+.body-banner{
     background-image: url("saifulimage/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
-    
-}
-h4{
-    color: orange;
 }
 
+.experience-areadiv {
+    box-shadow: 10px 10px 40px gray;
+    height: 50%;
+}
+
+.experience-areadiv:hover {
+    color: orange;
+    cursor: pointer;
+}
+
+footer p {text-align: center;font-size: 20px;}
 .experience-area{
     background-image: url("saifulimage/exp-bg.png");
-}
-section.experience-area {
     background-repeat: no-repeat;
     float: left;
 }
 
-
-
-.single-experience {
-    box-shadow: 10px 10px 40px gray;
-    height: 40%;
-    border-radius: 10px;
-}
-
 div#full-stack {
-
     border-left: 7px solid;
-    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image: linear-gradient(180deg,lightsalmon,tomato);
     border-image-slice: 1;
 }
-#baby-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(180deg, blue, cyan);
-    border-image-slice: 1;
-}
-footer p{
-    text-align: center;
-}
+div#baby-stack {border-left: 7px solid;border-image: linear-gradient(180deg,blue,cyan);border-image-slice: 1;}
